# agent-operator-lab

./: .gitignore  README.md  pyproject.toml  sample.env
0_setup/: .foundry_config_sample.json  1_setup.ipynb  golden_user_query_list.jsonl
1_controlplane/: 1_foundry_agent_foundry_sdk.ipynb  1_foundry_agent_monitoring.ipynb  1_foundry_sdk.ipynb  2_ms_agent_framework_connect_foundry.ipynb  3_hosted_agent_connect_foundry.ipynb  4_agent_fleet_management.ipynb
1_controlplane/1.1_hosted-agent_sdk/: README.md
1_controlplane/1.1_hosted-agent_sdk/calculator-agent/: Dockerfile  agent.yaml  requirements.txt
1_controlplane/1.1_hosted-agent_sdk/msft-docs-agent/: agent.yaml  main.py
1_controlplane/1.1_hosted-agent_sdk/web-search-agent/: agent.yaml  main.py  requirements.txt
1_controlplane/evaluation_templates/: basic-relevance.yaml  format-check.yaml  response-completeness.yaml  semantic-similarity.yaml
2_workload_optimization/: 1_context_optimization.ipynb  1_context_optimzation.ipynb  2_new_model_comparison.ipynb  3_model_migration.ipynb  4_multi_region_routing.ipynb  5_caching_strategies.ipynb  pyproject.toml
3_reliability/: 1_retry_and_fallback.ipynb  2_timeout_management.ipynb
4_observability/: 1_tracing_and_logging.ipynb  2_evaluation_pipeline.ipynb  SEG_EVAL_README.md  segment-eval-pipeline.py
4_observability/contexts/: product_contexts.xml  recommendation_contexts.xml
4_observability/log/: application_insight_data_sample.csv  live_golden_user_query_list.jsonl  offline_golden_query_response.jsonl
4_observability/sk_backend/: README.md  nohup.out  pyproject.toml  sample.env
4_observability/sk_backend/sk_orchestrator/: __init__.py  config.py  context_loader.py  main.py  models.py  orchestrator.py  plugins.py
